--- a/src/app/feature/components/objects/components/filter/filter.component.html
+++ b/src/app/feature/components/objects/components/filter/filter.component.html
@@ -1,29 +1,34 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title text-center">Filtros</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Color</h6>
-        <ul>
-            <li class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label">Verde</label>
-            </li>
-            <li class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label">Verde</label>
-            </li>
-            <li class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label">Verde</label>
-            </li>
-            <li class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label">Verde</label>
-            </li>
-            <li class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label">Verde</label>
-            </li>
-        </ul>
-        <h6 class="card-subtitle mb-2 text-muted mt-3">Tipo</h6>
-    </div>
+<div class="full-width container">
+    <button class="btn bg-blue mb-3 full-width" [routerLink]="['create']">Crear Objeto</button>
 </div>
+<section id="filters" class="container">
+    <div class="card full-width">
+        <div class="card-body">
+            <h5 class="card-title text-center">Filtros</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Color</h6>
+            <ul>
+                <li class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label">Verde</label>
+                </li>
+                <li class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label">Verde</label>
+                </li>
+                <li class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label">Verde</label>
+                </li>
+                <li class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label">Verde</label>
+                </li>
+                <li class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label">Verde</label>
+                </li>
+            </ul>
+            <h6 class="card-subtitle mb-2 text-muted mt-3">Tipo</h6>
+        </div>
+    </div>
+</section>
