--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -4,61 +4,9 @@
             <div class="col-3 col-md-3 col-sm-12">
                 <app-filter></app-filter>
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-sm-12">
                 <ul class="row">
-                    <li class="col-4 mb-4">
-                        <div class="card">
-                            <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Mochila</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the
-                                    card's
-                                    content.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="col-4 mb-4">
-                        <div class="card">
-                            <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Mochila</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the
-                                    card's
-                                    content.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="col-4 mb-4">
-                        <div class="card">
-                            <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Mochila</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the
-                                    card's
-                                    content.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="col-4 mb-4">
-                        <div class="card">
-                            <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Mochila</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the
-                                    card's
-                                    content.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="col-4 mb-4">
+                    <li class="col-4 mb-4" [routerLink]="['object']">
                         <div class="card">
                             <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
