--- a/src/app/feature/components/objects/components/filter/filter.component.css
+++ b/src/app/feature/components/objects/components/filter/filter.component.css
@@ -13,6 +13,24 @@ ul {
 }
 
 .bg-blue {
-    background-color: #f00;
+    background-color: #0F385A;
     color: #fff;
+}
+
+input {
+    width: 100%;
+    border-radius: 4px;
+}
+
+.ms-n5 {
+    margin-left: -40px;
+}
+
+.search-btn {
+    border-radius: 4px;
+    border: none;
+}
+
+input[type=text]:focus {
+    box-shadow: none;
 }
