Se cambia de font awesome a free font awesome

--- a/src/app/feature/components/objects/components/filter/filter.component.html
+++ b/src/app/feature/components/objects/components/filter/filter.component.html
@@ -5,7 +5,7 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar">
         <button class="bg-blue search-btn ps-2 pe-2">
-            <fa-icon [icon]="faMagnifyingGlass"></fa-icon>
+            <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </div>
 </div>
