--- a/src/app/feature/components/session/login/login.component.html
+++ b/src/app/feature/components/session/login/login.component.html
@@ -24,7 +24,7 @@
                             <div class="form-group  text-center">
                                 <button ng-click="authenticate()" ng-disabled="myForm.$invalid"
                                     class="btn bg-blue pull-right">Ingresar
-                                    <fa-icon [icon]="faArrorRight" class="ps-2"></fa-icon>
+                                    <i class="fa-solid fa-arrow-right"></i>
                                 </button>
                             </div>
                         </div>
