--- a/src/app/feature/components/footer/footer.component.html
+++ b/src/app/feature/components/footer/footer.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="col-3">
-
+            <i class="fa-brands fa-facebook"></i>
         </div>
     </div>
 </section>
