--- a/src/app/feature/components/footer/footer.component.css
+++ b/src/app/feature/components/footer/footer.component.css
@@ -1,15 +1,29 @@
 #footer {
     background-color: #0F385A;
     width: 100%;
-    height: 50px;
+    height: auto;
     position: absolute;
     bottom: 0;
 }
 
 .derechos {
     color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
-.fa-facebook {
-    color: #fff;
+.fa-brands{
+    color: rgba(255, 255, 255, 0.7);
+    margin: 7px;
+}
+.icons-footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.full-height{
+    height: 100%;
 }
