--- a/src/app/feature/components/footer/footer.component.css
+++ b/src/app/feature/components/footer/footer.component.css
@@ -2,7 +2,7 @@
     background-color: #0F385A;
     width: 100%;
     height: auto;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
@@ -14,16 +14,18 @@
     height: 100%;
 }
 
-.fa-brands{
+.fa-brands {
     color: rgba(255, 255, 255, 0.7);
     margin: 7px;
 }
-.icons-footer{
+
+.icons-footer {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
-.full-height{
+
+.full-height {
     height: 100%;
 }
