--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -6,16 +6,12 @@
             </div>
             <div class="col-lg-9 col-sm-12">
                 <ul class="row">
-                    <li class="col-4 mb-4" [routerLink]="['object']">
+                    <li class="col-4 mb-4" [routerLink]="['object']" *ngFor="let object of objects">
                         <div class="card">
                             <img src="../../../../../../assets/img/descarga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Mochila</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the
-                                    card's
-                                    content.</p>
+                                <h5 class="card-title text-center">{{object.name}}</h5>
+                                <p class="card-text">{{object.description}}</p>
                             </div>
                         </div>
                     </li>
