--- a/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
+++ b/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
@@ -1,10 +1,10 @@
-<section id="login">
+<section id="forgot">
   <div class="container center-div">
     <div class="login-form p-5">
       <div>
-        <label class="title text-center">INICIAR SESIÓN</label>
+        <label class="title text-center">RECUPERACIÓN DE CONTRASEÑA</label>
       </div>
-      <form name=" myForm" [formGroup]="form">
+      <form name=" myForm">
         <div class="login-container">
           <div class="row">
             <div class="col-md-12 mb-2">
@@ -16,20 +16,6 @@
                   ng-model="user.username"
                   required
                   class="form-control"
-                  [formControl]="email"
-                />
-              </div>
-            </div>
-            <div class="col-md-12 mb-3">
-              <div class="form-group">
-                <label>Password</label>
-                <input
-                  type="password"
-                  name="pass"
-                  ng-model="user.password"
-                  required
-                  class="form-control"
-                  [formControl]="pass"
                 />
               </div>
             </div>
@@ -40,7 +26,7 @@
                   ng-disabled="myForm.$invalid"
                   class="btn bg-blue pull-right"
                 >
-                  Ingresar
+                  Listo
                   <i class="fa-solid fa-arrow-right"></i>
                 </button>
               </div>
