--- a/src/app/feature/components/session/login/login.component.html
+++ b/src/app/feature/components/session/login/login.component.html
@@ -4,42 +4,31 @@
       <div>
         <label class="title text-center">INICIAR SESIÓN</label>
       </div>
-      <form name=" myForm" [formGroup]="form">
+      <form name=" form" [formGroup]="form" (ngSubmit)="login()">
         <div class="login-container">
           <div class="row">
             <div class="col-md-12 mb-2">
               <div class="form-group">
                 <label>Email</label>
-                <input
-                  type="email"
-                  name="email"
-                  ng-model="user.username"
-                  required
-                  class="form-control"
-                  [formControl]="email"
-                />
+                <input type="email" name="email" ng-model="user.username" required class="form-control"
+                  formControlName="email" />
               </div>
             </div>
             <div class="col-md-12 mb-3">
               <div class="form-group">
                 <label>Password</label>
-                <input
-                  type="password"
-                  name="pass"
-                  ng-model="user.password"
-                  required
-                  class="form-control"
-                  [formControl]="pass"
-                />
+                <input type="password" name="pass" ng-model="user.password" required class="form-control"
+                  formControlName="pass" />
+              </div>
+            </div>
+            <div class="col-md-12 mb-3" *ngIf="!logged">
+              <div class="invalid-feedbback">
+                Usuario y/o contraseña inválidos
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group text-center">
-                <button
-                  ng-click="authenticate()"
-                  ng-disabled="myForm.$invalid"
-                  class="btn bg-blue pull-right"
-                >
+                <button type="submit" ng-disabled="myForm.$invalid" class="btn bg-blue pull-right">
                   Ingresar
                   <i class="fa-solid fa-arrow-right"></i>
                 </button>
