--- a/src/app/feature/components/session/login/login.component.html
+++ b/src/app/feature/components/session/login/login.component.html
@@ -4,21 +4,19 @@
       <div>
         <label class="title text-center">INICIAR SESIÓN</label>
       </div>
-      <form name=" form" [formGroup]="form" (ngSubmit)="login()">
+      <form name="form" [formGroup]="form" (ngSubmit)="login()">
         <div class="login-container">
           <div class="row">
             <div class="col-md-12 mb-2">
               <div class="form-group">
                 <label>Email</label>
-                <input type="email" name="email" ng-model="user.username" required class="form-control"
-                  formControlName="email" />
+                <input type="email" name="email" required class="form-control" formControlName="email" />
               </div>
             </div>
             <div class="col-md-12 mb-3">
               <div class="form-group">
                 <label>Password</label>
-                <input type="password" name="pass" ng-model="user.password" required class="form-control"
-                  formControlName="pass" />
+                <input type="password" name="pass" required class="form-control" formControlName="pass" />
               </div>
             </div>
             <div class="col-md-12 mb-3" *ngIf="!logged">
