--- a/src/app/feature/components/objects/components/create-object/create-object.component.css
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.css
@@ -12,3 +12,19 @@
     background-color: #0F385A;
     color: #fff;
 }
+
+.title {
+    color: #0F385A;
+    font-size: 20px;
+    width: 100%;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.form-title {
+    color: #0F385A;
+    font-size: 17px;
+    width: 100%;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
