--- a/src/app/feature/components/objects/components/filter/filter.component.html
+++ b/src/app/feature/components/objects/components/filter/filter.component.html
@@ -3,8 +3,10 @@
 </div>
 <div class="full-width container mb-2">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar">
-        <button class="bg-blue search-btn ps-2 pe-2">
+        <form>
+            <input type="text" class="form-control" placeholder="Buscar" name="word" [(ngModel)]="word">
+        </form>
+        <button class="bg-blue search-btn" (click)="sendSearch()">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </div>
@@ -17,23 +19,7 @@
             <ul>
                 <li class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label">Verde</label>
-                </li>
-                <li class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label">Verde</label>
-                </li>
-                <li class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label">Verde</label>
-                </li>
-                <li class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label">Verde</label>
-                </li>
-                <li class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label">Verde</label>
+                    <label class="form-check-label">Rojo</label>
                 </li>
             </ul>
             <h6 class="card-subtitle mb-2 text-muted mt-3">Tipo</h6>
