--- a/src/app/feature/components/footer/footer.component.html
+++ b/src/app/feature/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="p-2" id="footer">
+<section class="p-2 footer-bs" id="footer">
   <div class="row">
     <div class="col-3"></div>
     <div class="col-6">
@@ -8,19 +8,17 @@
     </div>
     <div class="col-3 full-height">
       <div class="icons-footer">
-        <a href="https://es-la.facebook.com/poligran/">
-          <i class="fa-brands fa-facebook fa-3x"></i>
+        <a href="https://es-la.facebook.com/poligran/" target="_blank">
+          <i class="fa-brands fa-facebook fa-2x"></i>
         </a>
-        <a
-          href="https://twitter.com/Poligran?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-        >
-          <i class="fa-brands fa-twitter fa-3x"></i>
+        <a href="https://twitter.com/Poligran?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
+          <i class="fa-brands fa-twitter fa-2x"></i>
         </a>
-        <a href="https://www.instagram.com/poligrancol/?hl=es">
-          <i class="fa-brands fa-instagram fa-3x"></i>
+        <a href="https://www.instagram.com/poligrancol/?hl=es" target="_blank">
+          <i class="fa-brands fa-instagram fa-2x"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCYi9S12WxuUFPlqxo97VFWQ">
-          <i class="fa-brands fa-youtube fa-3x"></i>
+        <a href="https://www.youtube.com/channel/UCYi9S12WxuUFPlqxo97VFWQ" target="_blank">
+          <i class="fa-brands fa-youtube fa-2x"></i>
         </a>
       </div>
     </div>
