se agrega landing page

--- a/src/app/feature/components/landing/landing.component.html
+++ b/src/app/feature/components/landing/landing.component.html
@@ -1,6 +1,19 @@
 <section id="ladingpage">
-    <div class="mt-2">
-        <label class="title text-center">INICIAR SESIÓN</label>
+  <div class="mt-2 landing-image">
+    <label class="title text-center">LANDING PAGE</label>
+    <div class="row">
+      <div class="col-12" class="landing-background">
+        <div class="landing-message">
+          <p class="landing-text">
+            Bienvenido al sistema de objetos perdidos del politécnico
+            GranColombiano, aquí podrás buscar los objetos que se hayan perdido
+            dentro de la institución, recuerda que todos somos poli.
+          </p>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="col-12 pb-4">
     <app-list></app-list>
+  </div>
 </section>
