--- a/src/app/feature/components/header/header.component.css
+++ b/src/app/feature/components/header/header.component.css
@@ -1,3 +1,10 @@
+header{
+    background-color: #0F385A;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0;
+}
 .bg-blue {
     background-color: #0F385A;
 }
