--- a/src/app/feature/components/session/resetpassword/resetpassword.component.css
+++ b/src/app/feature/components/session/resetpassword/resetpassword.component.css
@@ -1,4 +1,4 @@
-#forgot {
+#resetpassword {
     background:
         /* top, transparent red, faked with gradient */
         linear-gradient(rgba(15, 56, 90, 0.5),
@@ -30,18 +30,7 @@
     color: #fff;
 }
 
-.title {
-    color: #0F385A;
-    font-size: 20px;
-    width: 100%;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.text-justify {
-    text-align: justify;
+a {
+    text-decoration: none;
+    font-size: 13px;
 }
