se editan los estilos de texto para que se pueda ajustar al tamaño de la ventana del navegador

--- a/src/app/feature/components/landing/landing.component.css
+++ b/src/app/feature/components/landing/landing.component.css
@@ -11,7 +11,7 @@
     padding: 10px;
 }
 .landing-text{
-    font-size: 3em;
+    font-size: 3vw;
     color: white;
     text-align: center;
     font-weight: bolder;
