--- a/src/app/feature/components/footer/footer.component.html
+++ b/src/app/feature/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="col-3"></div>
     <div class="col-6">
       <div class="derechos">
-        <span>© Todos los derechos reservados</span>
+        <span class="responsive-text">© Todos los derechos reservados</span>
       </div>
     </div>
     <div class="col-3 full-height">
@@ -11,13 +11,19 @@
         <a href="https://es-la.facebook.com/poligran/" target="_blank">
           <i class="fa-brands fa-facebook fa-2x"></i>
         </a>
-        <a href="https://twitter.com/Poligran?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
+        <a
+          href="https://twitter.com/Poligran?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+          target="_blank"
+        >
           <i class="fa-brands fa-twitter fa-2x"></i>
         </a>
         <a href="https://www.instagram.com/poligrancol/?hl=es" target="_blank">
           <i class="fa-brands fa-instagram fa-2x"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCYi9S12WxuUFPlqxo97VFWQ" target="_blank">
+        <a
+          href="https://www.youtube.com/channel/UCYi9S12WxuUFPlqxo97VFWQ"
+          target="_blank"
+        >
           <i class="fa-brands fa-youtube fa-2x"></i>
         </a>
       </div>
