--- a/src/app/feature/components/objects/components/create-object/create-object.component.css
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.css
@@ -15,7 +15,6 @@
 
 .title {
     color: #0F385A;
-    font-size: 20px;
     width: 100%;
     font-weight: bold;
     letter-spacing: 1px;
@@ -23,8 +22,10 @@
 
 .form-title {
     color: #0F385A;
-    font-size: 17px;
     width: 100%;
     font-weight: bold;
     letter-spacing: 1px;
+}
+.responsive-text{
+    font-size: 1vw;
 }
