--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -1,7 +1,7 @@
 <section class="list-object">
   <div class="container pt-4">
     <div>
-      <label class="title text-center">OBJETOS</label>
+      <label class="title text-center responsive-text">OBJETOS</label>
     </div>
     <div class="row">
       <div class="col-3 col-md-3 col-sm-12">
@@ -23,7 +23,7 @@
               <div class="buttons row mb-2">
                 <div class="col-6 p-2 center">
                   <button
-                    class="btn btn-primary btn-size"
+                    class="btn btn-primary btn-size responsive-text"
                     [routerLink]="['edit', object.id]"
                   >
                     Editar
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-6 p-2 center">
                   <button
-                    class="btn btn-danger btn-size"
+                    class="btn btn-danger btn-size responsive-text"
                     (click)="onDelete(object.id)"
                   >
                     Eliminar
