--- a/src/app/feature/components/session/forgotpassword/forgotpassword.component.css
+++ b/src/app/feature/components/session/forgotpassword/forgotpassword.component.css
@@ -32,8 +32,11 @@
 
 .title {
     color: #0F385A;
-    font-size: 20px;
+    font-size: 1vw;
     width: 100%;
     font-weight: bold;
     letter-spacing: 1px;
+} 
+.responsive-text{
+    font-size: 1vw;
 }
