--- a/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
+++ b/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12 mb-2">
               <div class="form-group">
-                <label>Email</label>
+                <label class="responsive-text">Email</label>
                 <input
                   type="email"
                   name="email"
@@ -24,7 +24,7 @@
                 <button
                   ng-click="authenticate()"
                   ng-disabled="myForm.$invalid"
-                  class="btn bg-blue pull-right"
+                  class="btn bg-blue pull-right responsive-text"
                 >
                   Listo
                   <i class="fa-solid fa-arrow-right"></i>
